# cv-maker

./: Makefile  README.md  pyproject.toml
cv_maker/: __init__.py  cli.py  cli_ui.py
cv_maker/models/: __init__.py  cv.py
cv_maker/parser/: __init__.py  markdown_parser.py
cv_maker/renderer/: __init__.py  pdf_renderer.py
cv_maker/template/: __init__.py  extractor.py
tests/: test_cli.py  test_models.py  test_parser.py  test_renderer.py
tests/fixtures/: sample.md
